# rdkit

./: .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
.azure-pipelines/: linux_build_sanitizer.yml  mac_build.yml  mac_build_java_swig4.yml  nix_build.yml  vs_build.yml
.github/workflows/: templates_updater.yml
Code/GraphMol/: AddHs.cpp  AdjustQuery.cpp  Atom.cpp  Atom.h  AtomIterators.h  Bond.cpp  Bond.h  CMakeLists.txt  Canon.cpp  Chirality.cpp  MolOps.h  MolPickler.cpp  MolPickler.h  QueryBond.h  QueryOps.cpp  QueryOps.h  RDKitBase.h  RDKitQueries.h  ROMol.cpp  ROMol.h  Sgroup.cpp  Sgroup.h  WedgeBonds.cpp  catch_adjustquery.cpp  catch_canon.cpp  catch_chirality.cpp  hanoitest.cpp  issue_2753_poc.cpp  molopstest.cpp  new_canon.cpp  testPickler.cpp  testSGroup.cpp
Code/GraphMol/CIPLabeler/: CIPLabeler.h  Descriptor.h
Code/GraphMol/ChemReactions/: Reaction.cpp  ReactionRunner.cpp  SanitizeRxn.cpp  catch_tests.cpp
Code/GraphMol/Descriptors/: GETAWAY.cpp  GETAWAY.h  test3D.cpp  testWHIM.cpp
Code/GraphMol/DistGeomHelpers/: Embedder.cpp  (+1 more)
Code/JavaWrappers/: Atom.i  AtomIterators.i  Bond.i  BondIterators.i  ChemTransforms.i  ExplicitBitVect.i  FilterCatalog.i  Fingerprints.i  MolDraw2D.i  MolSupplier.i  RGroupDecomposition.i  ROMol.i  SubstructLibrary.i  extend_std_map.i
Code/Query/: test.cpp
Code/RDBoost/: CMakeLists.txt  Wrap.cpp  Wrap.h
Code/RDGeneral/: BoostStartInclude.h  CMakeLists.txt  Invariant.cpp  Invariant.h
Code/RDStreams/: CMakeLists.txt
Docs/Book/: Cookbook.rst  GettingStartedInPython.rst  RDKit_Book.rst
Docs/Code/: SGroups.md
(+82 files in other folders)
